# trading-platform-ui

./: Cargo.toml  README.md  config.toml
frontend/: Cargo.toml
frontend/src/components/: order_entry.rs
protos/: common.proto  pricing.proto  trading.proto
server/: Cargo.toml  build.rs
server/src/: config.rs  main.rs
server/src/matching/: client.rs  mod.rs  protocol.rs
server/src/pricing/: ffi.rs  mod.rs  wrapper.rs
server/src/proto/: common.rs  mod.rs  pricing.rs  trading.rs
server/src/services/: mod.rs  pricing.rs  trading.rs
shared/: Cargo.toml
shared/src/: lib.rs
