# frontend/Cargo.toml
[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = "0.6"
leptos_meta = "0.6"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
tonic-web-wasm-client = "0.5"  # gRPC-Web for WASM
prost = "0.12"                  # Protobuf
web-sys = "0.3"
wasm-bindgen-futures = "0.4"
