[package]
name = "trading-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tonic = { workspace = true }
tonic-web = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
config = { workspace = true }
libc = { workspace = true }

# Additional dependencies
bytes = "1.5"
futures = "0.3"
dashmap = "5.5"  # Thread-safe HashMap for connection pooling
parking_lot = "0.12"  # Better mutexes
once_cell = "1.19"
chrono = "0.4"
tokio-stream = "0.1"
tonic-reflection = "0.11"

# Shared crate
shared = { path = "../shared" }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"
